--- a/webD2.html
+++ b/webD2.html
@@ -10,29 +10,31 @@
         <h1>{athlete_name}'s Performance History</h1>
     </header>
 
-    <div class="athlete-results">
-        <h2>Performances of {athlete_name}</h2>
-        <table border="1" cellpadding="5" cellspacing="0">
-            <thead>
-                <tr>
-                    <th>Overall Place</th>
-                    <th>Grade</th>
-                    <th>Time</th>
-                    <th>Date</th>
-                    <th>Meet</th>
-                    <th>Comments</th>
-                    <th>Photo</th>
-                </tr>
-            </thead>
-            <tbody>
-                {athlete_rows}
-            </tbody>
-        </table>
-    </div>
+    <!-- Main landmark reference to wrap the primary content -->
+    <main>
+        <div class="athlete-results">
+            <h2>Performances of {athlete_name}</h2>
+            <table border="1" cellpadding="5" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>Overall Place</th>
+                        <th>Grade</th>
+                        <th>Time</th>
+                        <th>Date</th>
+                        <th>Meet</th>
+                        <th>Comments</th>
+                        <th>Photo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {athlete_rows}
+                </tbody>
+            </table>
+        </div>
+    </main>
 
     <footer>
         <p>&copy; 2024 {athlete_name}'s Performance History. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
-'''
